<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <!-- Application specific settings -->

    <string name="app_name" translatable="false">AugendiagnoseLib</string>
    <string name="advertisement_flag" translatable="false">0</string>
    <string name="class_application_settings" translatable="false"></string>

    <!-- Generic constants -->

    <string name="title_activity_display_two">Compare Photos</string>
    <string name="title_activity_display_one">Display Photo</string>
    <string name="title_activity_list_folders_for_display">Select Name</string>
    <string name="title_activity_list_folders_for_display_second">Select Name for Second Picture</string>
    <string name="title_activity_organize_new_photos">Organize New Photos</string>
    <string name="title_activity_list_pictures_for_name">Select Pictures</string>
    <string name="title_activity_list_pictures_for_second_name">Select Second Picture</string>
    <string name="title_activity_select_two_pictures">Select Two Pictures</string>
    <string name="title_settings">Settings</string>
    <string name="title_camera">Camera</string>
    <string name="title_help">Help</string>
    <string name="section_select_photos">Select Photos</string>
    <string name="section_select_name">Select Name</string>
    <string name="section_select_date">Select Date</string>
    <string name="text_brightness">Brightness</string>
    <string name="text_contrast">Contrast</string>
    <string name="button_ok">OK</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_clear">Clear</string>
    <string name="button_select">Select</string>
    <string name="button_switch">Switch</string>
    <string name="button_delete">Delete</string>
    <string name="button_move">Move</string>
    <string name="button_other_pictures">Other Pictures</string>
    <string name="button_camera">Camera</string>
    <string name="button_overwrite">Overwrite</string>
    <string name="button_select_color" translatable="false">\u25a0</string>
    <string name="button_dont_show">Do not show again</string>
    <string name="button_show_later">Show again</string>
    <string name="button_purchased_item">%1$s (bought)</string>
    <string name="toggle_circle" translatable="false">\u2299</string>
    <string name="toggle_overlay_1" translatable="false">\u2460</string>
    <string name="toggle_overlay_2" translatable="false">\u2461</string>
    <string name="toggle_overlay_3" translatable="false">\u2462</string>
    <string name="toggle_overlay_4" translatable="false">\u2463</string>
    <string name="toggle_overlay_5" translatable="false">\u2464</string>
    <string name="toggle_overlay_6" translatable="false">\u2465</string>
    <string name="toggle_overlay_7" translatable="false">\u2466</string>
    <string name="overlay_trial_count" translatable="false">3</string>
    <string name="content_description_right_eye">Right Eye</string>
    <string name="content_description_left_eye">Left Eye</string>
    <string name="text_initializing">Initializing&#8230;</string>
    <string name="display_right_left">R-L</string>
    <string name="file_infix_right">right</string>
    <string name="file_infix_left">left</string>
    <string name="suffix_title_right">Right Eye</string>
    <string name="suffix_title_left">Left Eye</string>
    <string name="hint_search_name">[Search name]</string>
    <string name="hint_insert_name">[Enter name]</string>
    <string name="hint_edit_comment">[Enter image comment]</string>
    <string name="color_picker_title">Select an overlay color</string>
    <string name="color_picker_default_title">Select a Color</string>
    <string name="color_swatch_description">Color <xliff:g id="color_index" example="14">%1$d</xliff:g></string>
    <string name="color_swatch_description_selected">Color <xliff:g id="color_index" example="14">%1$d</xliff:g> selected</string>

    <!-- Resources configuring behaviour of activities in the app -->

    <string-array name="activities_with_action_camera" translatable="false"></string-array>
    <string-array name="activities_with_action_settings" translatable="false"></string-array>
    <string-array name="activities_with_home_enablement" translatable="false">
        <item>de.jeisfeld.augendiagnoselib.activities.DisplayHtmlActivity</item>
        <item>de.jeisfeld.augendiagnoselib.activities.ListFoldersForDisplayActivity</item>
        <item>de.jeisfeld.augendiagnoselib.activities.ListPicturesForNameActivity</item>
        <item>de.jeisfeld.augendiagnoselib.activities.OrganizeNewPhotosActivity</item>
        <item>de.jeisfeld.augendiagnoselib.activities.SelectTwoPicturesActivity</item>
        <item>de.jeisfeld.augendiagnoselib.activities.SettingsActivity</item>
    </string-array>
    <string-array name="googlebilling_ids" translatable="false"></string-array>
    <string-array name="googlebilling_premium_ids" translatable="false"></string-array>
    <string-array name="googlebilling_subscription_ids" translatable="false"></string-array>
    
    <!-- Resources defining available overlays -->

    <array name="overlays_left">
        <item>@drawable/overlay_circle</item>
        <item>@drawable/overlay_topo1_l</item>
        <item>@drawable/overlay_topo2_l</item>
        <item>@drawable/overlay_topo3_l</item>
        <item>@drawable/overlay_topo4_l</item>
        <item>@drawable/overlay_topo5_l</item>
        <item>@drawable/overlay_topo6_l</item>
        <item>@drawable/overlay_topo7_l</item>
    </array>
    <array name="overlays_right">
        <item>@drawable/overlay_circle</item>
        <item>@drawable/overlay_topo1_r</item>
        <item>@drawable/overlay_topo2_r</item>
        <item>@drawable/overlay_topo3_r</item>
        <item>@drawable/overlay_topo4_r</item>
        <item>@drawable/overlay_topo5_r</item>
        <item>@drawable/overlay_topo6_r</item>
        <item>@drawable/overlay_topo7_r</item>
    </array>
    <array name="overlay_buttons">
        <item>@id/toggleButtonOverlayCircle</item>
        <item>@id/toggleButtonOverlay1</item>
        <item>@id/toggleButtonOverlay2</item>
        <item>@id/toggleButtonOverlay3</item>
        <item>@id/toggleButtonOverlay4</item>
        <item>@id/toggleButtonOverlay5</item>
        <item>@id/toggleButtonOverlay6</item>
        <item>@id/toggleButtonOverlay7</item>
    </array>

    <integer-array name="overlay_types">
        <item>1</item>
        <item>1</item>
        <item>0</item>
        <item>1</item>
        <item>1</item>
        <item>1</item>
        <item>1</item>
        <item>1</item>
    </integer-array>

    <!-- Resources defining availalble help screens -->

    <array name="html_navigation_resources">
        <item>@string/html_navigation_overview</item>
        <item>@string/html_navigation_settings</item>
        <item>@string/html_navigation_organize_photos</item>
        <item>@string/html_navigation_display_photos</item>
        <item>@string/html_navigation_release_notes</item>
    </array>
    <array name="html_resources">
        <item>@string/html_overview</item>
        <item>@string/html_settings</item>
        <item>@string/html_organize_photos</item>
        <item>@string/html_display_photos</item>
        <item>@string/html_release_notes_base</item>
    </array>
</resources>