<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_camera"
        android:icon="@drawable/ic_launcher"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="@string/title_camera"
        android:visible="false"/>
    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_action_settings"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="@string/title_settings"
        android:visible="false"/>
    <item
        android:id="@+id/action_help"
        android:icon="@drawable/ic_action_help"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="@string/title_help"/>

</menu>