<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".activities.EditCommentActivity" >

    <LinearLayout
        android:id="@+id/buttonRow"
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" >

        <Button
            android:id="@+id/buttonCancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="0px"
            android:paddingRight="0px"
            android:text="@string/button_cancel"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/buttonClear"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="0px"
            android:paddingRight="0px"
            android:text="@string/button_clear"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/buttonOk"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="0px"
            android:paddingRight="0px"
            android:text="@string/button_ok"
            tools:ignore="ButtonStyle" />

    </LinearLayout>

    <EditText
        android:id="@+id/input_edit_comment"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_above="@id/buttonRow"
        android:layout_alignParentTop="true"
        android:gravity="top"
        android:hint="@string/hint_edit_comment"
        android:inputType="textMultiLine" >
    </EditText>

</RelativeLayout>